[fix] z-index у футера

--- a/local/templates/new_design/css/styles.css
+++ b/local/templates/new_design/css/styles.css
@@ -9262,7 +9262,7 @@ h1 {
 	background-image: url("/local/templates/new_design/assests/bgg.png");
 	background-repeat: no-repeat;
 	background-size: cover;
-	z-index: 100;
+	z-index: 9;
 	position: relative;
 	color: #fff
 }
